--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -72,6 +72,8 @@
   padding: 10px;
   border: none;
   border-bottom: 1px solid #000;
+  font-family: "inter", Courier, monospace;
+  font-size: 14px;
 }
 
 .login-modal__error {
@@ -93,6 +95,8 @@
   justify-content: center;
   margin-top: 10px;
   gap: 5px;
+  font-family: "inter", Courier, monospace;
+  font-size: 14px;
 }
 
 .login-modal__orspan {
@@ -168,13 +172,12 @@
   .login-modal__button {
     width: 100%;
     height: 56px;
-    margin-left: 30px;
+    margin-left: 10px;
   }
 
   .login-modal__or-signup-group {
     margin-top: 15px;
     font-size: 14px;
-    margin-left: 20px;
   }
 
   .login-modal__close {
