--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 16px;
+  position: relative;
 }
 
 .news-card__title {
@@ -112,6 +113,7 @@
   transition: opacity 0.2s ease;
   font-family: "Roboto", Courier, monospace;
   font-size: 12px;
+  font-weight: 500;
 }
 
 .news-card__bookmark:hover + .news-card__tooltip {
