--- a/src/components/RegisterModal/RegisterModal.css
+++ b/src/components/RegisterModal/RegisterModal.css
@@ -39,6 +39,7 @@
 .register-modal__input {
   padding: 10px;
   border-radius: 4px;
+  font-family: "inter", Courier, monospace;
   font-size: 14px;
   width: 90%;
   border: none;
@@ -59,6 +60,8 @@
   justify-content: center;
   margin-top: 10px;
   gap: 5px;
+  font-family: "inter", Courier, monospace;
+  font-size: 14px;
 }
 
 .register-modal__orspan {
